# EdgeFusion-ISAC

./: .gitignore  README.md  Smart Connectivity and Fusion Research Proposal.docx  pyproject.toml
configs/: data_budget.yaml  training_laptop_3060.yaml
docs/: local_training_plan.md
outputs/reports/: deepmimo_tiny_channel_report.json  radiate_tiny_report.json
scripts/: check_storage_budget.py  download_deepmimo_tiny.py  download_radiate_tiny.py  train_deepmimo_tiny_channel.py  train_radiate_tiny_poc.py
